--- a/static_files/genesis-generation-config/el-cl/values.env.tmpl
+++ b/static_files/genesis-generation-config/el-cl/values.env.tmpl
@@ -46,3 +46,4 @@ export ADDITIONAL_PRELOADED_CONTRACTS={{ .AdditionalPreloadedContracts }}
 export EL_PREMINE_ADDRS={{ .PrefundedAccounts }}
 export GOSSIP_MAX_SIZE={{ .GossipMaxSize }}
 export MAX_CHUNK_SIZE={{ .GossipMaxSize }}
+export MAX_EFFECTIVE_BALANCE=5000000000000
